rancher/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-dashboard
  namespace: cattle-system
spec:
  ingressClassName: traefik
  rules:
  - host: rancher.tpi2.local
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 443 
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
